--- a/model.ipynb
+++ b/model.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/wangqiurui/anaconda3/envs/tf/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "/home/wangqiurui/anaconda3/envs/tf/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.2\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+      "/home/wangqiurui/anaconda3/envs/strm/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -34,6 +32,68 @@
     "from torchsummary import summary\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.manifold import TSNE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >>> # Target are to be padded\n",
+    "# >>> T = 50      # Input sequence length\n",
+    "# >>> C = 20      # Number of classes (including blank)\n",
+    "# >>> N = 16      # Batch size\n",
+    "# >>> S = 30      # Target sequence length of longest target in batch (padding length)\n",
+    "# >>> S_min = 10  # Minimum target length, for demonstration purposes\n",
+    "# >>>\n",
+    "# >>> # Initialize random batch of input vectors, for *size = (T,N,C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(14.4500, grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_probs = torch.randn(100, 16, 20).log_softmax(2).detach().requires_grad_()\n",
+    "targets = torch.randint(1, 20, (16, 30), dtype=torch.long)\n",
+    "input_lengths = torch.full((16,), 100, dtype=torch.long)\n",
+    "target_lengths = torch.randint(10, 30, (16,), dtype=torch.long)\n",
+    "nn.CTCLoss()(log_probs, targets, input_lengths, target_lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100,\n",
+       "         100, 100]),\n",
+       " tensor([26, 25, 11, 20, 12, 16, 24, 13, 27, 10, 11, 24, 23, 23, 24, 26]))"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input_lengths,target_lengths"
    ]
   },
   {
